fixed overflow issues with parallax divs

--- a/src/core-ui/App.css
+++ b/src/core-ui/App.css
@@ -46,6 +46,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   position: relative;
+  /* overflow: hidden; */
 }
 body::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
@@ -605,11 +606,14 @@ header {
   flex-direction: column;
   gap: 4rem;
   padding: 2rem;
+  overflow: hidden;
 }
 .menu-slider-hero {
   object-fit: cover;
   max-width: 100%;
   height: auto;
+  width: 100%;
+  overflow: hidden;
 }
 /* Hero Video */
 .hero-section {
@@ -644,6 +648,10 @@ header {
   justify-content: center;
   gap: 1.5rem;
   align-items: center;
+  overflow-x: hidden;
+}
+.dish-slider {
+  overflow: hidden;
 }
 .dish-slider .dish-categories {
   margin: 0 auto;
@@ -781,6 +789,7 @@ header {
   padding-bottom: 10rem;
   max-width: 1440px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .section-10 h2 {
@@ -795,6 +804,7 @@ header {
   flex-direction: column;
   width: 80%;
   margin: 0 auto;
+  overflow: hidden;
 }
 .contact-section-success {
   display: flex;
@@ -821,6 +831,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  overflow: hidden;
 }
 
 .contact-form textarea {
@@ -832,6 +843,9 @@ header {
 .contact-form .webflow-style-input {
   min-width: 90%;
   width: max-content;
+  /* z-index: 2; */
+  /* display: inline-block; */
+  /* overflow: hidden; */
 }
 .section-10 .active-button-style {
   margin-top: 2rem;
@@ -853,6 +867,7 @@ header {
   max-width: 900px;
   color: var(--white);
   margin: 7rem auto;
+  overflow: hidden;
 }
 
 @-webkit-keyframes gradient {
@@ -879,9 +894,10 @@ header {
   margin: 0 auto;
   border-radius: 5px;
   opacity: 0.8;
-  width: 70%;
+  width: 100%;
   padding: 0.5rem 1.2rem;
   background-color: rgba(20, 20, 20, 0.672);
+  /* overflow: hidden; */
 }
 .webflow-style-input:after {
   content: "";
@@ -920,6 +936,18 @@ header {
   flex-direction: column;
   gap: 2rem;
   align-items: center;
+  width: 100%;
+  /* justify-content: center; */
+  overflow: hidden;
+}
+.input-section form {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+}
+.form-overflow {
+  /* overflow-y: hidden; */
 }
 .email-label {
   font-family: var(--poppins-font);
